# pipeworks_axis_descriptor_lab

./: .env.example  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  README.md  codecov.yml  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  dependency-update.yml  release-please.yml
app/: __init__.py  file_loaders.py  hashing.py  main.py  micro_indicators.py  ollama_client.py  relabel_policy.py  save_formatting.py  save_package.py  schema.py  signal_isolation.py  transformation_map.py
app/data/: abstraction_v0_1.json  embodiment_v0_1.json  intensity_v0_1.json
app/examples/: example_a.json  example_b.json
app/prompts/: system_prompt_v01.txt  system_prompt_v02_terse.txt  system_prompt_v03_environmental.txt  system_prompt_v04_contrast.txt
app/static/: app.js  mod-axis-actions.js  mod-diff.js  mod-events.js  mod-generate.js  mod-indicator-modal.js  mod-init.js  mod-loaders.js  mod-persistence.js  mod-state.js  mod-status.js  mod-sync.js  mod-theme.js  mod-tooltip.js  mod-utils.js  pipe-works-fonts.css  styles.css
app/templates/: index.html
docs/: conf.py  index.rst
docs/api/: file_loaders.rst  hashing.rst  index.rst  main.rst  micro_indicators.rst  ollama_client.rst  relabel_policy.rst  save_formatting.rst  save_package.rst  schema.rst  signal_isolation.rst  transformation_map.rst
docs/guides/: index.md  ipc-and-hashing.md  policy-rules.md
logs/: .gitignore
tests/: conftest.py  test_file_loaders.py  test_hashing.py  test_main.py  test_micro_indicators.py  test_ollama_client.py  test_relabel_policy.py  test_save_formatting.py  test_save_package.py  test_schema.py  test_signal_isolation.py  test_static_modules.py  test_transformation_map.py
